Bug 509655 - Texture offset sliders in the brush editor can become unusable
Summary: Texture offset sliders in the brush editor can become unusable
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 5.2.11
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-18 22:26 UTC by paleh
Modified: 2026-01-08 10:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description paleh 2025-09-18 22:26:41 UTC
SUMMARY
The sliders Horizontal and Vertical offset in the Texture>Pattern setting become unresponsive when the user pans or zooms on the canvas.

STEPS TO REPRODUCE
1. Select the brush b) Basic-2 Opacity
2. Open the brush editor, click on the setting Texture>Pattern. Go to the Options Tab.
3. Move the mouse outside of the brush editor window. Pan or Zoom on the canvas.
4. Inside the brush editor, try moving the slider Horizontal offset or Vertical offset.

OBSERVED RESULT
The sliders don't react to the clicks, staying at 0px

SOFTWARE/OS VERSIONS
Windows: 11 10.0.26100
Qt Version: 5.15.7
portable version

ADDITIONAL INFORMATION
Same on master (git 8dd1ad1)
Note: Switching to the Texture tab and changing a texture back and forth makes the sliders available again.
Comment 1 Vitamorus 2025-09-20 13:49:45 UTC
I can reproduce this on my Linux device
Comment 2 Freya Lupen 2025-09-30 17:09:17 UTC
It's unrelated to the canvas. When selecting a brush without a pattern, then enabling Pattern, the offset sliders' maximums are still 0 (making them seem unresponsive). Switching patterns sets the maximums, which are based on the pattern's dimensions.
Comment 3 Dmitry Kazakov 2026-01-08 10:02:35 UTC
Git commit a5bd60813b50c32d9488531fd2c8bb9f76418b37 by Dmitry Kazakov, on behalf of Luna Lovecraft.
Committed on 08/01/2026 at 10:02.
Pushed by dkazakov into branch 'master'.

Fix offset sliders not working correctly in texture options

This patch adds a hack that just prevents the maximum offset
values to be saved/loaded in the preset.

M  +0    -4    plugins/paintops/libpaintop/KisTextureOptionData.cpp

https://invent.kde.org/graphics/krita/-/commit/a5bd60813b50c32d9488531fd2c8bb9f76418b37