Fix offset sliders not working correctly in texture options

This patch adds a hack that just prevents the maximum offset
values to be saved/loaded in the preset.

BUG:509655